[gd_scene load_steps=23 format=2]

[ext_resource path="res://addons/localization_editor_viewer/ui/icons/expand_text.svg" type="Texture" id=1]
[ext_resource path="res://addons/localization_editor_viewer/ui/localization_editor_viewer.gd" type="Script" id=2]
[ext_resource path="res://addons/localization_editor_viewer/ui/icons/folder.svg" type="Texture" id=3]
[ext_resource path="res://addons/localization_editor_viewer/ui/themes/show_text_popout_button_style.tres" type="StyleBox" id=4]
[ext_resource path="res://addons/localization_editor_viewer/ui/icons/save.svg" type="Texture" id=6]
[ext_resource path="res://addons/localization_editor_viewer/ui/themes/text_edit_panel_style.tres" type="StyleBox" id=7]
[ext_resource path="res://addons/localization_editor_viewer/ui/themes/text_edit_style.tres" type="StyleBox" id=8]
[ext_resource path="res://addons/localization_editor_viewer/ui/themes/text_popout_header_panel_style.tres" type="StyleBox" id=9]
[ext_resource path="res://addons/localization_editor_viewer/ui/translation_key_browser_popup.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=21]
content_margin_left = 4.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]

[sub_resource type="StyleBoxFlat" id=11]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0.129412, 0.2, 1 )
expand_margin_left = 4.0
expand_margin_right = 3.0
expand_margin_top = 3.0

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.0509804, 0.129412, 1 )
expand_margin_left = 4.0
expand_margin_right = 3.0
expand_margin_top = 3.0

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.2, 0.211765, 0.294118, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.0745098, 0.184314, 1 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[node name="LocalizationEditorViewer" type="VBoxContainer"]
margin_right = 269.0
margin_bottom = 46.0
custom_constants/separation = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="."]
margin_right = 269.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )

[node name="KeyInput" type="HBoxContainer" parent="."]
margin_top = 3.0
margin_right = 269.0
margin_bottom = 27.0

[node name="TitleLabel" type="Label" parent="KeyInput"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 19.0
text = "Key:"

[node name="KeyInput" type="LineEdit" parent="KeyInput"]
margin_left = 31.0
margin_right = 185.0
margin_bottom = 24.0
hint_tooltip = "The input field for the translation key. 
If a valid key in inputted, the translated text will be shown below. 
You can browse available keys with the folder button to the right."
size_flags_horizontal = 3

[node name="LanguageSelectButton" type="OptionButton" parent="KeyInput"]
margin_left = 189.0
margin_right = 229.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 24 )
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
text = "en"
items = [ "en", null, false, 0, false, "fr", null, false, 0, false ]
selected = 0

[node name="PickerButton" type="Button" parent="KeyInput"]
margin_left = 233.0
margin_right = 249.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
hint_tooltip = "Browse valid keys and see their translated values."
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 3 )
flat = true

[node name="SaveButton" type="Button" parent="KeyInput"]
margin_left = 253.0
margin_right = 269.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
hint_tooltip = "Save any changes made to the contents of a key (edits made in the bottom input field). 
Will replace existing text associated with a key or append if it is a new key. 
You can create new files here too by selecting a file that does not exist."
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
disabled = true
icon = ExtResource( 6 )
flat = true

[node name="TextContainer" type="PanelContainer" parent="."]
margin_top = 29.0
margin_right = 269.0
margin_bottom = 134.0
custom_styles/panel = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="TextContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 265.0
margin_bottom = 104.0

[node name="TranslatedText" type="TextEdit" parent="TextContainer/HBoxContainer"]
margin_right = 241.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
hint_tooltip = "The translated version of the key input above. 
Editing this does nothing unless you save it to a .csv using the save button in the top-right of the ui."
size_flags_horizontal = 3
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "No translation available."
highlight_all_occurrences = true
virtual_keyboard_enabled = false
wrap_enabled = true

[node name="ShowTextPopoutButton" type="Button" parent="TextContainer/HBoxContainer"]
margin_left = 245.0
margin_right = 261.0
margin_bottom = 100.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
icon = ExtResource( 1 )

[node name="PopupContainer" type="Node" parent="."]

[node name="TranslationKeyBrowserPopup" parent="PopupContainer" instance=ExtResource( 10 )]
margin_left = -497.0
margin_top = 1.0
margin_right = -1026.0
margin_bottom = -299.0

[node name="FileDialog" type="FileDialog" parent="PopupContainer"]
margin_right = 315.0
margin_bottom = 417.0
window_title = "Save a Translation Text"
filters = PoolStringArray( "*.csv" )
current_dir = "res://translations"
current_file = "text.csv"
current_path = "res://translations/text.csv"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditPopup" type="PopupPanel" parent="PopupContainer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -273.0
margin_top = 33.0
margin_right = 277.0
margin_bottom = -50.0
rect_min_size = Vector2( 550, 0 )
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupContainer/TextEditPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer" type="PanelContainer" parent="PopupContainer/TextEditPopup/VBoxContainer"]
margin_right = 548.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
custom_styles/panel = ExtResource( 9 )

[node name="TitleLabel" type="Label" parent="PopupContainer/TextEditPopup/VBoxContainer/HeaderContainer"]
margin_top = 4.0
margin_right = 548.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Edit Text:"
align = 1

[node name="PopoutTextEdit" type="TextEdit" parent="PopupContainer/TextEditPopup/VBoxContainer"]
margin_top = 24.0
margin_right = 548.0
margin_bottom = 489.0
size_flags_vertical = 3
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer2" type="PanelContainer" parent="PopupContainer/TextEditPopup/VBoxContainer"]
margin_top = 493.0
margin_right = 548.0
margin_bottom = 515.0
custom_styles/panel = ExtResource( 9 )

[node name="OKButton" type="Button" parent="PopupContainer/TextEditPopup/VBoxContainer/HeaderContainer2"]
margin_top = 2.0
margin_right = 548.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
text = "OK"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="PopupContainer/TextEditPopup"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -549.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 516.0
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClosePopupButton" type="Button" parent="PopupContainer/TextEditPopup/HBoxContainer"]
margin_left = 529.0
margin_right = 548.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/focus = SubResource( 20 )
text = "x"
flat = true

[connection signal="text_changed" from="KeyInput/KeyInput" to="." method="_on_KeyInput_text_changed"]
[connection signal="item_selected" from="KeyInput/LanguageSelectButton" to="." method="_on_LanguageSelectButton_item_selected"]
[connection signal="pressed" from="KeyInput/PickerButton" to="." method="_on_PickerButton_pressed"]
[connection signal="pressed" from="KeyInput/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="TextContainer/HBoxContainer/ShowTextPopoutButton" to="." method="_on_ShowTextPopoutButton_pressed"]
[connection signal="key_selected" from="PopupContainer/TranslationKeyBrowserPopup" to="." method="_on_TranslationKeyBrowserPopup_key_selected"]
[connection signal="file_selected" from="PopupContainer/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="text_changed" from="PopupContainer/TextEditPopup/VBoxContainer/PopoutTextEdit" to="." method="_on_PopoutTextEdit_text_changed"]
[connection signal="pressed" from="PopupContainer/TextEditPopup/VBoxContainer/HeaderContainer2/OKButton" to="PopupContainer/TextEditPopup" method="hide"]
[connection signal="pressed" from="PopupContainer/TextEditPopup/HBoxContainer/ClosePopupButton" to="PopupContainer/TextEditPopup" method="hide"]
